@@ -1,3 +1,6 @@
+Mon Feb 23 17:07:41 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/odbc.c: applied patch by Amir Shamsuddin to fix core
+
 Wed Feb 11 15:39:34 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/ctlib/unittests/Makefile.am src/dblib/unittests/Makefile.am:
 	* src/odbc/unittests/Makefile.am src/tds/unittests/Makefile.am:
@@ -1306,4 +1309,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2727 2009-02-11 14:40:15 freddy77 Exp $
+$Id: ChangeLog,v 1.2728 2009-02-23 16:08:33 freddy77 Exp $
